--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>First Assignment</title>
 </head>
 <body>
-    
+    <header class="header">
+        <nav>
+            <h3 class="nav-title">LOGO</h3>
+            <ul>
+                <li><a href="https://demo.com"><button class="btn-primary">Sign Up</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner-content">
+            <h1 class="banner-heading">Cool Dark UI Template for Webflow Agencies!</h1>
+            <a href="https://demo.com"><button class="btn-primary">Stay Focused</button></a>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
