--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
         </div>
     </header>
     <main>
+        <section class="action">
+        <div class="action-text">
+            <h3 class="action-title">See It in Action</h3>
+            <p class="action-description">Explore the live preview and imagine your brand in this bold new look.</p>
+            <button class="btn-primary">Launch Live Preview</button>
+        </div>
+        <div>
+            <img class="action-image" src="Assets/wc-mini.png" alt="">
+        </div>
+        </section>
 
     </main>
     <footer>
