--- a/index.html
+++ b/index.html
@@ -31,6 +31,26 @@
         </div>
         </section>
 
+        <section class="productive-users">
+            <h3 class="productive-users-heading">Joined Thousands of Productive Users</h3>
+
+            <div class="productive-users-item">
+                <div class="productive-users-items">
+                    <h2 class="productive-users-items-heading">50K</h2>
+                    <p class="productive-users-items-description">Active Users</p>
+                </div>
+                <div class="productive-users-items">
+                    <h2 class="productive-users-items-heading">2M+</h2>
+                    <p class="productive-users-items-description">Focus Sessions</p>
+                </div>
+                <div class="productive-users-items">
+                    <h2 class="productive-users-items-heading">95%</h2>
+                    <p class="productive-users-items-description">Satisfaction Rate</p>
+                </div>
+            </div>
+
+        </section>
+
     </main>
     <footer>
 
