--- a/index.html
+++ b/index.html
@@ -51,6 +51,27 @@
 
         </section>
 
+        <section class="get-in-touch">
+            <div class="get-in-touch-heading">
+                <h3 class="get-in-touch-heading-title">
+                    Let’s Get in Touch
+                </h3>
+            </div>
+            <div class="get-in-touch-form">
+                <form action="">
+                    <label for="email">Email</label>
+                    <input type="email" name="" id="email" placeholder="example@email.com">
+
+                    <label for="name">Name</label>
+                    <input type="text" name="" id="name" placeholder="full name">
+
+                    <label for="message">Message</label>
+                    <textarea name="" id="message" placeholder="write your message...." cols="30" rows="10"></textarea>
+                </form>
+                <button class="btn-secondary">Get in Touch</button>
+            </div>
+        </section>
+
     </main>
     <footer>
 
