upload footer section

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <input type="text" name="" id="name" placeholder="full name">
 
                     <label for="message">Message</label>
-                    <textarea name="" id="message" placeholder="write your message...." cols="30" rows="10"></textarea>
+                    <textarea name="" id="message" placeholder="write your message...." cols="30" rows="30"></textarea>
                 </form>
                 <button class="btn-secondary">Get in Touch</button>
             </div>
@@ -74,7 +74,16 @@
 
     </main>
     <footer>
-
+        <div class="footer">
+            <h1 class="footer-heading">LOGO</h1>
+            <p class="footer-description">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+            <ul>
+                <li><a class="footer-links" href="">Home</a></li>
+                <li><a class="footer-links" href="">About</a></li>
+                <li><a class="footer-links" href="">How it Works</a></li>
+                <li><a class="footer-links" href="">Services</a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
