--- a/index.html
+++ b/index.html
@@ -51,6 +51,54 @@
 
         </section>
 
+        <section class="users-say">
+            <h3 class="users-say-heading">What our users say</h3>
+            <div class="loved">
+            <div class="loved-by-designers">
+                <img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt="">
+                <h3 class="loved-by-designers-heading">Loved by Designers</h3>
+                <p class="loved-by-designers-description">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <div class="loved-by-designers-footer">
+                    <div class="loved-by-designers-footer-image">
+                        <img src="Assets/avatar.png" alt="">
+                    </div>
+                    <div class="reviewer">
+                    <h5 class="reviewer-name">Reviewer name</h5>
+                    <p class="date">Date</p>
+                    </div>
+                </div>
+            </div>
+            <div class="loved-by-designers">
+                <img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt="">
+                <h3 class="loved-by-designers-heading">Loved by Designers</h3>
+                <p class="loved-by-designers-description">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <div class="loved-by-designers-footer">
+                    <div class="loved-by-designers-footer-image">
+                        <img src="Assets/avatar.png" alt="">
+                    </div>
+                    <div class="reviewer">
+                    <h5 class="reviewer-name">Reviewer name</h5>
+                    <p class="date">Date</p>
+                    </div>
+                </div>
+            </div>
+            <div class="loved-by-designers">
+                <img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt="">
+                <h3 class="loved-by-designers-heading">Loved by Designers</h3>
+                <p class="loved-by-designers-description">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <div class="loved-by-designers-footer">
+                    <div class="loved-by-designers-footer-image">
+                        <img src="Assets/avatar.png" alt="">
+                    </div>
+                    <div class="reviewer">
+                    <h5 class="reviewer-name">Reviewer name</h5>
+                    <p class="date">Date</p>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+
         <section class="get-in-touch">
             <div class="get-in-touch-heading">
                 <h3 class="get-in-touch-heading-title">
@@ -71,7 +119,6 @@
                 <button class="btn-secondary">Get in Touch</button>
             </div>
         </section>
-
     </main>
     <footer>
         <div class="footer">
